@@ -1,5 +1,7 @@
 2010-06-17 Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>
 
+	* testsuite/TestMLPSolver.cpp: Test different available solver.
+
 	* include/dlvhex/MLPSolver.hpp: Not always assuming clingo.
 
 2010-06-16 Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>
